--- a/department-ng/package.json
+++ b/department-ng/package.json
@@ -25,6 +25,7 @@
     "@angular/ssr": "^17.0.9",
     "bootstrap": "^5.3.2",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
@@ -35,6 +36,7 @@
     "@angular/compiler-cli": "^17.0.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^18.18.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
